--- a/src/main.css
+++ b/src/main.css
@@ -5,6 +5,8 @@ body {
 #header {
   color: white;
   text-decoration: underline;
+  overflow: hidden;
+  text-align: center;
 }
 
 h2 {
@@ -199,4 +201,9 @@ h2 {
 footer {
 	text-align: center;
 	color: white;
+  overflow: hidden;
+  position: fixed;
+  text-align: center;
+  bottom: 0;
+   width: 100%;
 }
