--- a/src/main.css
+++ b/src/main.css
@@ -221,6 +221,5 @@ h2 {
   padding-right: 1em;
   width: 100%;
   text-align: center;
-  color: gray;
-  background-color: white;
+  color: white;
 }
